# FreeFit

./: .gitignore  CMakeLists.txt  LICENSE  README.md  exercisedata.cpp  exercisedata.h  exerciselistwidget.cpp  exerciselistwidget.h
include/: controls.h  datadefinitions.h  downloadexercisedemand.h  downloadexercisedemandhandler.h  exercise.h  exerciseeditor.h  exerciselistwidget.h  exerciseviewer.h  hashtagbar.h  iconbutton.h  mainwindow.h  materialbutton.h  materialclip.h  materialdialog.h  materialslider.h  materialtextfield.h  newexercisedemand.h  newexercisedemandhandler.h  parser.h  profile.h  profile.in.h  profileeditor.h  profileitem.h  toggleablelabel.h  videocutter.h  workout.h  workoutgenerationwidget.h  workoutwidget.h  workoutwidget.in.h  xmlnode.h  xmlreader.h  xmlwriter.h  youtubedownloader.h  youtubedownloader.in.h  youtubeoptions.h
src/: CMakeLists.txt  controls.cpp  controls.in.cpp  downloadexercisedemandhandler.cpp  downloadexercisedemandhandler.in.cpp  exercisedata.cpp  exerciseeditor.cpp  exerciseeditor.in.cpp  exerciselistwidget.cpp  exerciseviewer.cpp  hashtagbar.cpp  iconbutton.cpp  main.cpp  main.in.cpp  mainwindow.cpp  mainwindow.in.cpp  materialbutton.cpp  materialclip.cpp  materialslider.cpp  materialtextfield.cpp  parser.cpp  profile.cpp  profileeditor.cpp  profileitem.cpp  profileitem.in.cpp  toggleablelabel.cpp  videocutter.cpp  workout.cpp  workoutgenerationwidget.cpp  workoutwidget.cpp  workoutwidget.in.cpp  xmlnode.cpp  xmlreader.cpp  xmlwriter.cpp  youtubedownloader.cpp  youtubeoptions.cpp
test/: CMakeLists.txt  ProfileEditorReadInTest.xml  ReadXMLAndPopulateExerciseList.xml  WorkoutWidgetExerciseListTest.cpp  WorkoutWidgetTest.xml  dataIOTest.cpp  dataIOTest.in.cpp  dataTest.cpp  exerciseGUITest.cpp  exerciseGUITest.in.cpp  exerciseViewerTest.cpp  exerciseViewerTest.in.cpp  materialButtonTest.cpp  materialSliderTest.cpp  materialWidgetTest.cpp  profileEditorTest.cpp  profileEditorTest.in.cpp  profileItemTest.cpp  testOne.cpp  workoutGenerationTest.cpp  workoutGenerationTest.in.cpp  workoutGenerationWidgetTest.cpp  workoutGenerationWidgetTest.in.cpp  workoutWidgetExerciseListTest.in.cpp  workoutWidgetTest.cpp  workoutWidgetTest.in.cpp  youtubeDownloadTest.cpp  youtubeDownloadTest.cpp.in  youtubeDownloadTest.in.cpp
test/input/: EmptyProfiles.xml  ExerciseDemand.in.xml  LaunchEditor.xml  ProfileEditorReadInTest.in.xml  ReadXMLAndPopulateExerciseList.in.xml  WorkoutGenerationTest.in.xml  WorkoutGenerationTest.xml  WorkoutGenerationWidgetTestWorkouts.xml  WorkoutWidgetTest.in.xml  WorkoutWidgetTest.xml  WriteProfileFileTest.xml
tools/: style.css
